--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <div class="banner">
         <div class="comparison-container">
             <div class="comparison">
-                <img src="banner_images/oldwindow.png" alt="Старое окно" class="old-window">
-                <img src="banner_images/newwindow.png" alt="Новое окно" class="new-window">
+                <img src="banner_images/oldwindow.svg" alt="Старое окно" class="old-window">
+                <img src="banner_images/newwindow.svg" alt="Новое окно" class="new-window">
             </div>
             <div class="text-container">
-                <img src="banner_images/convinient.png" alt="Удобное" class="text-image">
-                <img src="banner_images/beautiful.png" alt="Красивое" class="text-image">
+                <img src="banner_images/convinient.svg" alt="Удобное" class="text-image">
+                <img src="banner_images/beautiful.svg" alt="Красивое" class="text-image">
             </div>
             <div class="slider">
                 <div class="stick"></div>
-                <div class="circle">
+                <div class="circle">                       
                 </div>
             </div>
         </div>
